--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,32 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#272727"
+    android:layout_alignParentRight="true"
+    android:background="#4941f4"
     tools:context=".MainActivity"
     tools:layout_editor_absoluteY="81dp">
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="203dp"
-        android:layout_height="68dp"
-        android:layout_marginBottom="174dp"
-        android:onClick="Generate"
-        android:text="Generate"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AlgShow" />
 
     <TextView
         android:id="@+id/AlgShow"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="98dp"
-        android:layout_marginTop="4dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="105dp"
         android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
